--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wine-enterprise",
-  "version": "1.0.0",
-  "description": "Wine Enterprise: An Ionic project",
+  "version": "1.1.1",
+  "description": "wine-enterprise: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0"
@@ -21,5 +21,7 @@
     "cordova-plugin-splashscreen",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "ios"
+  ]
 }
